# RoomMesh

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  REACT_NATIVE_MDNS_SETUP.md  README.md  pyproject.toml
android/app/: build.gradle.snippet
android/app/src/main/java/com/roommesh/modules/: MdnsModule.kt
docs/: 3dgs-design-doc.md  phase-0-github-issues.md  phase-0-network-testing.md
mobile/: .gitignore  README.md  app.json  index.ts  package.json
mobile/app/: capture.tsx  index.tsx
mobile/modules/mdns/: expo-module.config.json  index.ts
mobile/modules/mdns/android/: build.gradle
mobile/modules/mdns/android/src/main/java/expo/modules/mdns/: MdnsModule.kt
mobile/src/: App.tsx
mobile/src/components/: CaptureScreen.tsx  ServerSettings.tsx
mobile/src/screens/: ServerSettingsScreen.tsx
mobile/src/services/: CameraCapture.ts  MdnsDiscovery.ts  ServerPreferences.ts  WebRTCService.ts
specs/: android-mdns-implementation.md
specs/issues/: 001-set-up-macbook-fastapi-project-skeleton-with-uvicorn.specs.md
src/: __init__.py  config.py  main.py
src/modules/: __init__.py
src/modules/discovery/: __init__.py  mdns.py
src/modules/frames/: __init__.py  sink.py
src/modules/health/: __init__.py  routes.py
src/modules/scene/: __init__.py
src/modules/signaling/: __init__.py  connection.py  routes.py
src/services/: MdnsDiscovery.ts
tests/: __init__.py  test_app_integration.py  test_config.py  test_frames.py  test_health.py  test_main.py  test_mdns.py  test_signaling.py  test_signaling_route.py
